--- a/static/index.html
+++ b/static/index.html
@@ -13,17 +13,16 @@
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+      src="https://unpkg.com/react-bootstrap@2.9.0-beta.1/dist/react-bootstrap.min.js"
       crossorigin
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"
+      src="https://unpkg.com/js-cookie@3.0.5/dist/js.cookie.min.js"
       crossorigin
     ></script>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      href="https://unpkg.com/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       crossorigin="anonymous"
     />
 
